--- a/pages.html
+++ b/pages.html
@@ -24,7 +24,6 @@
 .pages-logo .logo {
   width: 100px;
   height: 20px;
-  color: #006c43;
 }
 
 .pages-title {
@@ -39,4 +38,4 @@
 .pages-list li {
   margin: .5em 0;
 }
-</style><div class="pages-header"><div class="container"><div class="pages-logo"><span class="logo"><span class="logo__img"></span><span class="logo__text"></span></span></div></div></div><div class="pages-content"><div class="container"><h1 class="pages-title">Страницы</h1><ol class="pages-list"><li><a href="index.html" title="Главная">Главная</a></li></ol></div></div><script src="js/bundle.min.js"></script></body></html>
+</style><div class="pages-header"><div class="container"><div class="pages-logo"><span class="logo"><span class="logo__img"></span><span class="logo__text">Psychea</span></span></div></div></div><div class="pages-content"><div class="container"><h1 class="pages-title">Страницы</h1><ol class="pages-list"><li><a href="info-default.html" title="О проекте (default)">О проекте (default)</a></li><li><a href="info-graphs.html" title="О проекте (graphs)">О проекте (graphs)</a></li><li><a href="info-graphs-2.html" title="О проекте (graphs 2)">О проекте (graphs 2)</a></li></ol></div></div><script src="js/bundle.min.js"></script></body></html>
